--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 22</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
                   <li><i class="icofont-rounded-right"></i><strong>Email:</strong><a href="shambhushah455@gmail.com" style="color: rgb(39, 45, 46);">  shambhushah455@gmail.com </a></li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Not-Available</li>
@@ -288,6 +288,21 @@
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
+            <!-- currently working skill -->
+
+            <div class="resume-item">
+              <h4></h4>
+              <h5>Programmer
+                <sub>currently</sub></h5>
+              <p><em>Responsibilities:
+              </em></p>
+              <ul>
+                <li> Supporting clients and developing new features using JSP, Servlets, and PostgreSQL </li>
+                <li>Monitoring and managing bug tracking using Mentis</li>
+              </ul>
+            </div>
+
+
             <div class="resume-item">
               <h4></h4>
               <h5>Associate Software Engineer (CGT)
@@ -581,7 +596,7 @@
               <div class="address">
                 <i class="icofont-google-map"></i>
                 <h4>Location:</h4>
-                <p>Kapan, Kathmandu, Nepal</p>
+                <p>Osaka, JAPAN</p>
               </div>
 
               <div class="email">
@@ -593,11 +608,12 @@
               <div class="phone">
                 <i class="icofont-phone"></i>
                 <h4>Call:</h4>
-                <p><a href="tel:+977-9827-3950-26" style="color: rgb(65, 68, 69);" >+977-9827395026</a></p>
+                <p><a href="#" style="color: rgb(65, 68, 69);" >+977-9827395026</a></p>
               </div>
 
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1765.5733980695447!2d85.35029539554843!3d27.743617894600245!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb19c0be09f5bb%3A0x44ed9d77ec125f98!2sNikhileshwor%20pul!5e0!3m2!1sen!2snp!4v1712744234424!5m2!1sen!2snp" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <!-- <iframe src="https://maps.app.goo.gl/s9QK2pCygAim41MB7" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d26248.344760704607!2d135.51625455!3d34.6788618!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6000e0b7e4764e57%3A0xbea610d725ffcb7f!2sMorinomiya%20Station!5e0!3m2!1sen!2sjp!4v1739086473009!5m2!1sen!2sjp" width="400" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
 
           </div>
