--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>My Portfolio</title>
+  <title>Portfolio</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -82,7 +82,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>I graduated with a Bachelor of Technology in Computer Science & Engineering from Biju Patnaik University of Technology, India (2018-2022). My passion lies in web development, particularly backend work. However, my ultimate goal is to become a full-stack developer.</p>
+          <p>
+            I earned my Bachelor of Technology in Computer Science & Engineering from Biju Patnaik University of Technology, India (2018–2022). I am passionate about web development, with a strong focus on backend technologies, and I am working toward my ultimate goal of becoming a skilled full-stack developer.
+          </p>
         </div>
 
         <div class="row">
@@ -97,10 +99,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 16 May 2001</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> https://shambhushah7.com.np</li>
+                  <!-- <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 16 May 2001</li> -->
+                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://shambhu-shah.onrender.com/">shambhu.shah</a></li>
                   <li><i class="icofont-rounded-right"></i><strong>Phone: </strong><a href="tel:+977-9827-3950-26" style="color: rgb(39, 45, 46);">+977-9827395026</a></li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Kathmandu, Nepal</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Country:</strong> Nepal</li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -108,12 +110,13 @@
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 24</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
                   <li><i class="icofont-rounded-right"></i><strong>Email:</strong><a href="shambhushah455@gmail.com" style="color: rgb(39, 45, 46);">  shambhushah455@gmail.com </a></li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Not-Available</li>
+                  <!-- <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Not-Available</li> -->
                 </ul>
               </div>
             </div>
             <p>
-              I build web applications with Java, using JSP, JavaServlet, and MySQL. I also have experience with big data technologies like Apache Hadoop and AWS
+I build web applications with Java, leveraging JSP, Java Servlet, and MySQL. I also have experience in big data technologies such as Apache Hadoop and AWS. My professional background spans U.S. healthcare systems, big data ETL processes, and enterprise-scale industry solutions.
+
             </p>
           </div>
         </div>
